--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p $PORT",
+    "heroku-postbuild":"npm run build"
   },
   "dependencies": {
     "@headlessui/react": "^1.4.2",
@@ -40,5 +41,8 @@
     "eslint-config-next": "12.0.8",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.15"
+  },"engines": {
+    "node": "12.16.3",
+    "npm":"6.14.4"
   }
 }
