--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pm-system",
   "private": true,
+  "cacheDirectories": [".next/cache"],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
