--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "pm-system",
   "private": true,
-  "cacheDirectories": [".next/cache"],
+  "cacheDirectories": [
+    "node_modules/",
+    ".next/cache/"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
